# RealWorldRobotics-2023

./: README.md  ROS_CATKIN_WS_HOWTO.md  matteoHand_normalized_joint_pos.txt
design/: hand.xml  hand_design.xml
design/mesh/: Palm.stl  (+22 more)
motor_control_RL/: cal.yaml  example_GroupA_RL.py  gripper_controller_GroupA_RL.py  (+1 more)
teleop/: CMakeLists.txt  package.xml
teleop/launch/: RL_rwr.launch  teleop_oakd_rwr.launch
teleop/scripts/: gripper_controller_node.py  gripper_controller_node_RL.py  mano_faive_retargeter.py  oakd_hand_tracker_ingress.py  test.py
teleop/scripts/low_level_controller/MuJoCo_controller/: hand_controller.py  mujoco_controller.py  mujoco_controller_auto.py  mujoco_controller_auto_recording.py  mujoco_controller_framework.py  mujoco_simulate.py  trajectories.py
teleop/scripts/low_level_controller/MuJoCo_controller/others/: mujoco_controller_auto_recording.py
teleop/scripts/low_level_controller/motor_control/: cal.yaml  example_GroupA.py  gripper_controller.py  gripper_controller_GroupA.py  gripper_defs_GroupA.yaml  max_motorpositions.txt
teleop/scripts/low_level_controller/recorded_policies/: Sphere_UP_XNEG_15_scaled.npy
teleop/scripts/utils/: gripper_utils.py  retarget_utils.py
teleop/src/: gripper_controller_node.py  mano_faive_retargeter.py  oakd_hand_tracker_ingress.py
teleop/src/Motor_Control/Code/: cal.yaml  example_GroupA.py  finger_kinematics_GroupA.py  gripper_defs.yaml
teleop/src/low_level_controller/motor_control/: cal.yaml  example_GroupA.py  finger_kinematics_GroupA.py  gripper_controller_GroupA.py  gripper_defs_GroupA.yaml
(+28 files in other folders)
